# coding-challenge

./: .gitignore  Cargo.toml  README.md
hackerrank_com/diagonal_difference/: Cargo.toml
hackerrank_com/diagonal_difference/src/: main.rs
hackerrank_com/mini_max_sum/: Cargo.toml
hackerrank_com/mini_max_sum/src/: main.rs
hackerrank_com/plus_minus/: Cargo.toml  README.md
hackerrank_com/plus_minus/src/: main.rs
hackerrank_com/stair_case/: Cargo.toml
hackerrank_com/stair_case/src/: main.rs
leetcode/easy/is_palindrome/: Cargo.toml
leetcode/easy/is_palindrome/src/: main.rs
leetcode/easy/two_sum/: Cargo.toml
leetcode/easy/two_sum/src/: main.rs
leetcode/hard/text_justification/: Cargo.toml
leetcode/hard/text_justification/src/: main.rs
leetcode/medium/find_players_with_zero_or_one_losses/using-rust/: Cargo.toml
src/: lib.rs  main.rs
src/hackerrank_com/: mod.rs
src/hackerrank_com/diagonal_difference/: README.md
src/hackerrank_com/plus_minus/: solution.rs
src/hackerrank_com/stair_case/: solution.rs
src/problems/easy/: mod.rs
src/problems/easy/is_palindrome/: README.md
src/problems/hard/: mod.rs
src/problems/hard/text_justification/: README.md  solution.rs
src/utils/: mod.rs  my_collection.rs
src/utils/collection/: generator.rs
src/utils/collection/sort/: bubble_sort.rs  merge_sort.rs
tesla-coding-challenge/using-javascipt/: temperature-closest-to-zero.js
using-rust/: Cargo.toml
using-rust/src/: lib.rs  main.rs
using-rust/src/hackerrank_com/: mod.rs
utils/: Cargo.toml
utils/src/collection/: mod.rs  reduce_fn.rs
(+7 files in other folders)
