[workspace]
resolver = "2"

members = [
  "utils",
  
  "leetcode/easy/two_sum",
  "leetcode/easy/is_palindrome",

  "leetcode/medium/add_two_numbers/using-rust",
  "leetcode/medium/find_players_with_zero_or_one_losses/using-rust",

  "leetcode/hard/text_justification",
  
  "hackerrank_com/diagonal_difference",
  "hackerrank_com/mini_max_sum",
  "hackerrank_com/plus_minus",
  "hackerrank_com/stair_case",
]

[workspace.package]
publish = false
edition = "2021"

[workspace.dependencies]
rand = "0.8.5"
